[tool.poetry]
name = "testingalchemyfastapi"
version = "0.1.0"
description = ""
authors = ["Sheikh Muhammed Shoaib <shoaib76289@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.8"
uvicorn = "^0.21.1"
pyjwt = "^2.6.0"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
